Loads of decomp recipes, also get fluid handling working in a capacity